@startuml

title __SERVICE's Class Diagram__\n

  package  {
    package Service {
      class ServiceNote {
          + ServiceNote()
          + add()
          + all()
      }
    }
  }
  

  package  {
    package Service {
      class ServiceStudent {
          + ServiceStudent()
          + add()
          + del()
          + mod()
          + find()
          + all()
      }
    }
  }
  

  package  {
    package Service {
      class ServiceTeme {
          + ServiceTeme()
          + add()
          + del()
          + mod()
          + find()
          + all()
      }
    }
  }
  

  ServiceNote o-- NoteRepo : rep
  ServiceStudent o-- StudentRepo : rep
  ServiceTeme o-- TemeRepo : rep


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
